# CoronaHeatMap

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  Dockerfile  LICENSE  Readme.md  Server.cpp  Server.h  build_seal.sh  challenge_demo.cpp  circuit_priv.cpp  circuit_priv.h  client_standalone.cpp  compile.sh  install_seal.sh  linear.cpp  main.cpp  mask_demo.cpp  params.h  plain.cpp  portable_endian.h  rand.h  server_standalone.cpp  shake.cpp  shake.h  uniformDouble.cpp
keccak/opt64/: KeccakP-1600-SnP.h
pythonDemo/: client.py  client.spec  customSocket.py  dataWidget.py  fileDialog.py  heatMap.py  networkDialog.py  radiusPrompt.py  requestWidget.py  server.py  server.spec  serverWidget.py  setup.py  startPrompt.py
pythonDemo/GeoJSONAustria/: oesterreich.json
pythonDemo/QT-Designer/: data_widget.ui  generate_request.ui  networkDialog.ui  patientData.py  patient_data.ui  requestWidget.py  serverGUI.ui
pythonDemo/backend/: client  server
pythonDemo/data/: HeatMap.html  Vornamen.csv  counties.txt  locationID_mapping.csv  nachnamen.csv  nachnamen.txt  numbers.csv  oneHot.csv  vornamen.txt
src/: Client.cpp  Client.h  Server.cpp  Server.h  rand.h  shake.cpp
